header content filled

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -1,4 +1,5 @@
 $siteWidth: 1140px;
+$additionalVerge: calc((1600px - $siteWidth)/2);
 $textColorMain: #222222;
 $textColorAlternative: #f16d7f;
 $gaps: 20px;
