--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
+body {
+  width: 1140px;
+  padding-left: calc(50% - 570px);
+  padding-right: calc(50% - 570px);
+}
+
+.footer__bottom__socials__link, .footer__bottom__socials, .footer__bottom, .footer__menu__sections, .footer__menu__logo_container, .subscriber__form__email_fields, .subscriber__teaser, .subscriber, .feature, .products__catalogue, .header__account-button, .header__main_menu, .header__drop_menu__summary, .header__search__container, .header__search, .header__top__right_block, .header__top__left_block, .header__top {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.footer__menu__links, .footer, .subscriber__form, .subscriber__teaser__text, .products__product, .products, .header__drop_menu, .header, body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -10,67 +29,122 @@ a {
 }
 
 body {
-  width: 1140px;
-  padding-left: calc(50% - 570px);
-  padding-right: calc(50% - 570px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  overflow-x: hidden;
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  padding: 20px 0;
-}
-.header__top {
-  display: flex;
-  width: 1140px;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-between;
-}
-.header__top__right_block, .header__top__left_block {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
+  padding: 25px 0;
   gap: 20px;
 }
+.header__top {
+  justify-content: space-between;
+  width: 1140px;
+}
+.header__top__right_block, .header__top__left_block {
+  gap: 20px;
+}
+.header__slogan {
+  font-size: 27px;
+  font-weight: 300;
+}
+.header__slogan span {
+  color: #f16d7f;
+  font-weight: 900;
+}
+.header__search {
+  position: relative;
+}
+.header__search__container {
+  position: absolute;
+  left: 89px;
+}
+.header__search__box {
+  width: 317px;
+  height: 38px;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  padding-left: 16px;
+}
+.header__search__box:focus {
+  outline: none;
+}
+.header__search__button {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #e6e6e6;
+  border-radius: 0px 3px 3px 0px;
+  background-color: #e6e6e6;
+}
+.header__search__button:hover {
+  background-color: #f16d7f;
+  border: #f16d7f;
+}
+.header__drop_menu {
+  gap: 20px;
+  position: absolute;
+  align-self: start;
+  z-index: 1;
+  top: -20px;
+  background-color: #ffffff;
+}
+.header__drop_menu__summary {
+  width: 87px;
+  height: 38px;
+  font-size: 14px;
+  font-weight: 300;
+  background-color: #cdcdcc;
+  background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
+  border: 1px solid #e6e6e6;
+  border-radius: 3px 0px 0px 3px;
+  cursor: pointer;
+  list-style: none;
+  justify-content: center;
+}
+.header__drop_menu__group {
+  padding: 5px;
+}
+.header__drop_menu__link {
+  padding: 9px;
+}
 .header__main_menu {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
   gap: 40px;
+  font-size: 14px;
+  font-weight: 700;
+}
+.header__account-button {
+  background-color: #f16d7f;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 10px 10px 10px 20px;
+  color: #ffffff;
+  border: 0;
+  gap: 10px;
 }
 
 .slider {
   width: 1600px;
   min-height: 665px;
-  background-image: url(../img/slider_background.png);
-  align-items: center;
-  position: relative;
+  background-image: url("../img/slider_background.png");
   margin-bottom: 60px;
 }
 .slider__title {
   display: grid;
   grid-template-columns: 20px auto;
-  grid-template-rows: repeat(2, 1fr);
-  position: absolute;
-  top: 250px;
-  left: 230px;
+  grid-template-rows: 60px 40px;
+  padding-top: 250px;
+  padding-left: 230px;
 }
 .slider__logo {
   grid-row-start: 1;
   grid-row-end: 3;
+  min-height: 100px;
 }
 .slider__slogan, .slider__subslogan {
-  line-height: 1em;
-  line-height-step: 0em;
+  font-size: 60px;
+  font-weight: 900;
+}
+.slider__subslogan {
+  font-size: 40px;
 }
 .slider__subslogan span {
   color: #f16d7f;
@@ -81,6 +155,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 20px;
+  margin-bottom: 60px;
 }
 .categories__banner__1 {
   grid-row-start: 1;
@@ -97,14 +172,262 @@ body {
   grid-row-start: 2;
   grid-row-end: 4;
 }
+.categories__banner__1, .categories__banner__2, .categories__banner__3, .categories__banner__4 {
+  position: relative;
+}
+.categories__banner__description {
+  position: absolute;
+  top: 32px;
+  background-color: #ffffff;
+  padding: 16px;
+}
+.categories__banner__title {
+  font-size: 18px;
+  font-weight: 900;
+}
+.categories__banner__category {
+  font-size: 30px;
+  font-weight: 900;
+  color: #f16d7f;
+}
 
 .products {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  width: 100%;
+}
+.products__title {
+  font-size: 30px;
+  font-weight: 700;
+  padding-bottom: 10px;
+}
+.products__slogan {
+  font-size: 14px;
+  font-weight: 400;
+  color: #9f9f9f;
+  padding-bottom: 40px;
 }
 .products__container {
+  width: 100%;
   display: grid;
   gap: 20px;
   grid-template-columns: repeat(4, 1fr);
+  padding-bottom: 40px;
+}
+.products__product {
+  align-items: start;
+  width: 100%;
+}
+.products__product__photo {
+  width: 270px;
+  height: 280px;
+}
+.products__product__title {
+  font-size: 13px;
+  font-weight: 400;
+  padding: 10px;
+}
+.products__product__price {
+  font-size: 16px;
+  font-weight: 700;
+  color: #f16d7f;
+  padding: 10px;
+}
+.products__catalogue {
+  background-color: #f16d7f;
+  font-size: 16px;
+  font-weight: 400;
+  padding: 10px 10px 10px 20px;
+  color: #ffffff;
+  border: 0;
+  gap: 10px;
+  margin-bottom: 60px;
+}
+
+.feature {
+  width: 1140px;
+  margin-bottom: 60px;
+}
+.feature__banner {
+  height: 530px;
+  width: 767px;
+  background-image: url(../img/features_background.png);
+  position: relative;
+}
+.feature__banner__slogan {
+  position: absolute;
+  z-index: 1;
+  top: 15%;
+  left: 5%;
+}
+.feature__banner__shadow {
+  opacity: 0.5;
+  position: absolute;
+}
+.feature__banner__title, .feature__banner__description {
+  font-size: 54px;
+  font-weight: 700;
+  color: #ffffff;
+}
+.feature__banner__title span {
+  color: #f16d7f;
+}
+.feature__banner__description {
+  font-size: 32px;
+}
+.feature__boxes {
+  height: 530px;
+  width: 373px;
+  background-image: url(../img/features_box_background.png);
+}
+.feature__box {
+  max-height: 136.6666666667px;
+  padding: 40px;
+  display: grid;
+  grid-template-rows: 25% 75%;
+  grid-template-columns: 25% 75%;
+  gap: 20px;
+}
+.feature__box__logo {
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+.feature__box__title, .feature__box__description {
+  color: #fbfbfb;
+  grid-column-start: 2;
+  font-size: 20px;
+  font-weight: 700;
+}
+.feature__box__description {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.subscriber {
+  width: 1600px;
+  min-height: 438px;
+  background-image: url("../img/photo_subscribe.jpg");
+  margin-bottom: 60px;
+}
+.subscriber__teaser {
+  padding-left: 230px;
+  gap: 20px;
+  width: 570px;
+}
+.subscriber__teaser__text {
+  align-items: start;
+  gap: 20px;
+}
+.subscriber__teaser__slogan {
+  font-size: 16px;
+  font-weight: 400;
+  font-style: italic;
+}
+.subscriber__teaser__signature {
+  font-size: 16px;
+  font-weight: 700;
+  color: #f16d7f;
+}
+.subscriber__teaser__signature span {
+  font-size: 12px;
+  font-weight: 300;
+}
+.subscriber__form {
+  gap: 20px;
+  width: 570px;
+}
+.subscriber__form__title {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+}
+.subscriber__form__title span {
+  font-size: 14px;
+}
+.subscriber__form__email_field {
+  width: 334px;
+  height: 46px;
+  background-color: #e1e1e1;
+  border-radius: 23px 0 0 23px;
+  border: 0;
+  padding-left: 24px;
+}
+.subscriber__form__email_field:focus {
+  outline-style: none;
+}
+.subscriber__form__email_button {
+  width: 104px;
+  height: 46px;
+  background-color: #f16d7f;
+  border-radius: 0px 23px 23px 0px;
+  border: none;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.footer {
+  gap: 60px;
+}
+.footer__menu {
+  width: 1140px;
+  min-height: 200px;
+  display: grid;
+  grid-template-columns: 45% repeat(3, 1fr);
+  grid-template-rows: 40px 200px;
+  gap: 40px;
+}
+.footer__menu__logo_container {
+  gap: 20px;
+}
+.footer__menu__description {
+  overflow-y: scroll;
+  font-size: 14px;
+  font-weight: 300;
+}
+.footer__menu__sections {
+  font-size: 18px;
+  font-weight: 700;
+  color: #f16d7f;
+}
+.footer__menu__links {
+  align-items: start;
+  justify-content: space-between;
+}
+.footer__menu__link {
+  font-size: 16px;
+  font-weight: 400;
+}
+.footer__menu__grid_element_2 {
+  order: 4;
+}
+.footer__menu__grid_element_4 {
+  order: 5;
+}
+.footer__menu__grid_element_6 {
+  order: 7;
+}
+.footer__menu__grid_element_8 {
+  order: 8;
+}
+.footer__bottom {
+  width: 1600px;
+  justify-content: space-between;
+  padding: 20px 0;
+  background-color: #e6e6e6;
+}
+.footer__bottom__copyright, .footer__bottom__socials {
+  font-size: 16px;
+  font-weight: 400;
+  padding: 0 230px;
+}
+.footer__bottom__socials {
+  gap: 10px;
+}
+.footer__bottom__socials__link {
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  background-color: #ffffff;
+}
+.footer__bottom__socials__link:hover {
+  background-color: #f16d7f;
 }/*# sourceMappingURL=style.css.map */
