index.html almost completed

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  color: #f16d7f;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -86,24 +90,26 @@ body {
   z-index: 1;
   top: -20px;
   background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  border-radius: 3px 0px 0px 3px;
 }
 .header__drop_menu__summary {
   width: 87px;
   height: 38px;
   font-size: 14px;
-  font-weight: 300;
+  font-weight: 400;
   background-color: #cdcdcc;
   background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
-  border: 1px solid #e6e6e6;
-  border-radius: 3px 0px 0px 3px;
   cursor: pointer;
   list-style: none;
   justify-content: center;
 }
 .header__drop_menu__group {
-  padding: 5px;
+  margin: 10px;
+  border-bottom: 2px solid #cdcdcc;
 }
 .header__drop_menu__link {
+  display: block;
   padding: 9px;
 }
 .header__main_menu {
@@ -121,6 +127,113 @@ body {
   gap: 10px;
 }
 
+.menu {
+  display: flex;
+  list-style-type: none;
+  justify-content: center;
+}
+
+.menu-link {
+  text-decoration: none;
+  display: block;
+  padding: 20px 25px;
+  color: #222222;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
+}
+
+.mega-box {
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 5px;
+  border: 1px solid #e8e8e8;
+  display: none;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  right: auto;
+}
+
+.menu-headding {
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 32px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  color: #232323;
+  width: 235px;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.mega-link {
+  display: block;
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 28px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+  color: #646464;
+  text-decoration: none;
+}
+
+.mega-link:hover {
+  color: #f16d7f;
+}
+
+.menu-item {
+  margin-right: 46px;
+}
+
+.menu-item:last-of-type {
+  margin-right: 0;
+}
+
+.menu-list {
+  position: relative;
+}
+
+.mega-box::before {
+  content: "";
+  display: block;
+  width: 10px;
+  height: 10px;
+  background-color: #ffffff;
+  position: absolute;
+  top: -6px;
+  left: 33px;
+  transform: rotate(45deg);
+  border-top: 1px solid #e8e8e8;
+  border-left: 1px solid #e8e8e8;
+}
+
+.menu-list:hover .mega-box {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 310px;
+  width: 846px;
+}
+
+.menu-baner {
+  width: 255px;
+  height: 118px;
+  background-color: #efefef;
+  margin: auto;
+}
+
+.last:hover .mega-box {
+  right: 0;
+  left: auto;
+}
+
+.last:hover .mega-box::before {
+  right: 50px;
+  left: auto;
+}
+
 .slider {
   width: 1600px;
   min-height: 665px;
@@ -133,18 +246,22 @@ body {
   grid-template-rows: 60px 40px;
   padding-top: 250px;
   padding-left: 230px;
+  vertical-align: top;
 }
 .slider__logo {
   grid-row-start: 1;
   grid-row-end: 3;
   min-height: 100px;
 }
-.slider__slogan, .slider__subslogan {
+.slider__slogan {
   font-size: 60px;
   font-weight: 900;
+  line-height: 0.7692307692;
 }
 .slider__subslogan {
   font-size: 40px;
+  font-weight: 900;
+  line-height: 1.3;
 }
 .slider__subslogan span {
   color: #f16d7f;
